tests/neg/i4453.scala
class x0 { var x0 == _ * // error: _* can be used only for last argument
// error '=' expected, but eof found